k8s/platform/mlflow/mlflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  namespace: ml
  labels:
    app.kubernetes.io/name: mlflow
    app.kubernetes.io/part-of: "254carbon"
spec:
  ingressClassName: nginx
  rules:
  - host: mlflow.local.254carbon
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mlflow-tracking
            port:
              name: http
